--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ToDo List App</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <div id="todo-sheet-container">
+
+        </div>
+        <script src="app.js"></script>
     </body>
 </html>
