Feat: Added nav bar.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     </head>
     <body>
         <div id="todo-sheet-container">
-
+            <section id="nav-bar">
+                <img src="icons/menu-icon.png" id="menu-icon">
+                <div id="blank-container"></div>
+                <div id="icon-container">
+                    <img src="icons/palette-icon.png" class="nav-icons">
+                    <img src="icons/bell-icon.png" class="nav-icons">
+                    <img src="icons/add-user-icon.png" class="nav-icons">
+                    <img src="icons/more-icon.png" class="nav-icons">
+                </div>
+            </section>
         </div>
         <script src="app.js"></script>
     </body>
