Feat: Added last edited feature.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </section>
             <section id="sheet-actions">
                 <div class="todo-actions">
-                    <p id="last-edited-message">Edited...</p>
+                    <p id="last-edited-message"></p>
                     <button id="submit-button" form="task-form">+</button>
                 </div>
             </section>
