Feat: Added responsive design.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                 <img src="icons/menu-icon.png" id="menu-icon">
                 <div id="blank-container"></div>
                 <div id="icon-container">
-                    <div class="icon-dropdowns">
+                    <div class="icon-dropdowns" id="palette-dropdown">
                         <img src="icons/palette-icon.png" class="nav-icons" id="palette-icon">
-                        <div class="dropdown-content">
+                        <div class="dropdown-content" id="dropdown-content-palette">
                             <div class="palette-options">
                                 <button class="palette-color-buttons" id="yellow-color-button"></button>
                                 <button class="palette-color-buttons" id="blue-color-button"></button>
@@ -29,9 +29,9 @@
                     <div class="icon-dropdowns">
                         <img src="icons/add-user-icon.png" class="nav-icons">
                     </div>
-                    <div class="icon-dropdowns">
+                    <div class="icon-dropdowns" id="clear-all-dropdown">
                         <img src="icons/more-icon.png" class="nav-icons" id="more-icon">
-                        <div class="dropdown-content">
+                        <div class="dropdown-content" id="dropdown-content-clear-all">
                             <button id="clear-all-button">Clear All Tasks</button>
                         </div>
                     </div>
