--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                     <div class="icon-dropdowns" id="clear-all-dropdown">
                         <img src="icons/more-icon.png" class="nav-icons" id="more-icon">
                         <div class="dropdown-content" id="dropdown-content-clear-all">
-                            <button id="clear-all-button">Clear All Tasks</button>
+                            <button id="clear-all-button" class="dropdown-actions">Clear All Tasks</button>
+                            <button id="clear-checked-button" class="dropdown-actions">Clear Checked Tasks</button>
                         </div>
                     </div>
                 </div>
