Fix: changed icon in nav bar.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                     <div class="icon-dropdowns">
                         <img src="icons/bell-icon.png" class="nav-icons">
                     </div>
-                    <div class="icon-dropdowns">
-                        <img src="icons/add-user-icon.png" class="nav-icons">
+                    <div class="icon-dropdowns" id="new-sheet-button">
+                        <img src="icons/new-sheet-icon.png" class="nav-icons">
                     </div>
                     <div class="icon-dropdowns" id="clear-all-dropdown">
                         <img src="icons/more-icon.png" class="nav-icons" id="more-icon">
